# langchain-practice

./: app.py  ice_breaker.py  output_parser.py  pyproject.toml
agents/: linkedin_lookup_agent.py
intro-to-vector-dbs/: ingestion.py
react-langchain/: callbacks.py  main.py
third_parties/: linkedin.py
tools/: tools.py
